tests/parser/parse-declare.4.bad.error
error: Malformed declaration
  --> test:4:9
   |
 4 |  (declare "x" 5)
   |           ^^^ expected symbol
