tests/parser/parse-declare.4.bad.coalton
;; BAD: Parse Declare
(package test-package)

(declare "x" 5)
